# designstorm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json
.github/workflows/: deploy.yml
docs/: architecture.html  design.html
frontend/: app.ts
migrations/: 0001_init.sql  0002_runtime_providers.sql  0003_storm_runs.sql  0004_board_nodes_and_edges.sql  0005_edge_anchors_and_node_sizes.sql  0006_storm_run_layout.sql  0007_typed_slots.sql  0008_assets.sql  0009_color_node.sql  0010_draw_node.sql  0011_harmony_conditional.sql  0012_claude_oauth_sessions.sql  0013_chat_sessions.sql
src/: main.rs
static/: styles.css
templates/: app.html  auth_panel.html  base.html  board_node.html  index.html  provider_panel.html  roots_list.html  storm_board.html
