[package]
name = "designstorm"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.1", features = ["macros", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.12"
time = "0.3.39"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }

