[package]
name = "designstorm"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
async-trait = "0.1.88"
async-stream = "0.3.6"
askama = "0.12.1"
aws-config = "1.5.17"
aws-sdk-s3 = "1.77.0"
axum = { version = "0.8.1", features = ["macros", "json", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
cookie = "0.18.1"
datastar = { version = "0.3.1", features = ["axum", "tracing"] }
dotenvy = "0.15.7"
futures-core = "0.3.31"
jsonwebtoken = "9.3.1"
lash-core = { git = "https://github.com/SamGalanakis/lash", rev = "f1bf8bacbe256d9e2bf0f084ea86add0609aeff7", package = "lash-core", default-features = false, features = ["native-tools-only"] }
mime_guess = "2.0.5"
rand = "0.8"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
thiserror = "2.0.12"
time = "0.3.39"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
